actually adding analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
                 </ul>
             </footer>
         {% if jekyll.environment == 'production' %}
-        % include analytics.html %}
+        {% include analytics.html %}
         {% endif %}
         </body>
     </html>
